octsympy 3.1.1+
===============

  * Move repo to https://github.com/gnu-octave/symbolic
  * `sym(<array>, ratflag)` now respects `ratflag` (issue #1273).
  * Changed metainfo.xml ID and corrected long-standing "Addon"
    link to GNU Octave.



octsympy 3.1.1 (2023-03-19)
===========================

  * New symbolic commands:

          cart2pol
          piecewise

  * `kron` works for three or more inputs (issue #1245).

  * Indexing bounds checking to support Octave 8.

  * Fix assumptions on SymPy 1.12.

  * Other misc fixes and changes for SymPy 1.12.



octsympy 3.0.1 (2022-08-09)
===========================

  * New `@double` numerical functions; these are wrappers around SymPy,
    so they are slower than native floating-point implementations.

          adjoint

  * Misc bug fixes and improvements in error handling.

  * `.oct-config` files indicate source is UTF-8 encoded and should improve
    any locale or encoding problems on Octave 7 and above.

  * Fixes some errors when Python is running in Cygwin-like environment.
    But there could still be errors in other places (issue #1182).



octsympy 3.0.0 (2022-07-05)
===========================

  * New symbolic commands:

          cumprod
          cumsum
          ztrans

  * `dsolve` output prefers expressions (right-hand sides) rather than
    equations.  Also uses structs for systems.  This brings it closer
    to `solve` and more compatible with other symbolic toolboxes.

  * `dsolve` supports arrays of initial conditions.

  * Fixes for SymPy 1.6 and later.

  * Fixes for Octave 6.x and Octave 7.1.

  * Drop Python 2 support.

  * The `symbolic-win-py-bundle-x.y.z.zip` is no longer provided as we
    have not been able to port it to Python 3.

  * Update minimum versions of SymPy to 1.4 and Octave to 5.1.

  * Remove deprecated `evalpy` and `python_cmd` utilities.



octsympy 2.9.0 (2020-03-04)
===========================

  * Default python interpreter is now `python3`.
