@@ -1,6 +1,10 @@
 octsympy 3.1.1+
 ===============
 
+  * New symbolic commands:
+
+          fplot
+
   * Move repo to https://github.com/gnu-octave/symbolic
   * `sym(<array>, ratflag)` now respects `ratflag` (issue #1273).
   * Changed metainfo.xml ID and corrected long-standing "Addon"
